[package]
name = "nominatim"
version = "0.3.5"
edition = "2021"
authors = ["Grant Handy <granthandy@proton.me>"]
repository = "https://github.com/grantshandy/nominatim-rs"
documentation = "https://docs.rs/nominatim"
description = "Bindings to the reverse geocoding API powered by openstreetmap."
keywords = ["async", "coordinates", "nominatim", "geocoding", "location"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls"]

[dependencies]
reqwest = { version = "0.13", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"

[dev-dependencies]
tokio = { version = "1.20", features = ["full"] }
